--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  publish = "public"  # Changed from "../frontend"
+  publish = "public"
   functions = "functions"
-  command = "npm install"
 
 [[redirects]]
   from = "/api/*"
@@ -15,9 +14,9 @@
 
 [functions]
   node_bundle = true
-  external_node_modules = ["express", "axios", "express-session", "cors", "memorystore"]
+  external_node_modules = ["express", "axios", "express-session", "cors", "memorystore", "serverless-http"]
 
 [dev]
   port = 8888
-  publish = "public"  # Changed from "../frontend"
+  publish = "public"
   functions = "functions"
