--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "gtav-showroom",
   "version": "1.0.0",
   "description": "GTA V Showroom with Discord Auth",
+  "main": "functions/server.js",
   "scripts": {
+    "build": "echo 'No build required'",
     "start": "netlify dev"
   },
   "dependencies": {
@@ -12,5 +14,6 @@
     "cors": "^2.8.5",
     "memorystore": "^1.6.7",
     "serverless-http": "^3.0.3"
+    // REMOVED: "dotenv": "^16.3.1" - Not needed for Netlify
   }
 }
